--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-replace": "^1.0.0",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-stylelint": "^8.0.0",
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^2.2.0",
